# Hypoxanthine-Agent

./: .gitignore  AGENTS.md  CHANGELOG.md  PROJECT-SUMMARY.md  README.md  check_model_connectivity.py  environment.yml  m7b_review.txt  m8_review.txt  pyproject.toml  requirements.txt  test_clean.sh  test_run.sh
.opencode/: hypo-workflow.json
.opencode/agents/: hw-docs.md
.opencode/commands/: hw-explain.md  hw-pr.md  send-to-hyx.md
.opencode/plugins/: hypo-workflow.ts
.pipeline/patches/: P008-fix-session-image-recognition-missing-weixin-upload.md
.plan-state/: batch-architecture.md  batch-decompose.yaml  batch-discover.yaml  decompose.yaml  discover.yaml  generate.yaml  refactor-roadmap.yaml
config/: deployment.yaml.example  deps_safety_overrides.txt  email_rules.yaml  exec_profiles.yaml  heartbeat_prompt.md  models.yaml  narration.yaml  persona.yaml  secrets.yaml  secrets.yaml.example  security.yaml  skills.yaml  tasks.yaml
deploy/: README.md  hypo-agent.service  install.sh
deploy/nginx/: hypo-agent.conf
docs/: architecture.md  audit_report_full.md  brainstorm-log-inspector.md  channel_audit_report.md  skills-style.md
docs/architecture/: agent-active-recovery-state-machine.md  c3-agent-cli-outbound-contract.md  channel-file-delivery.md  codex-isolated-execution-lane.md  image-gen-capability-audit.md  image-gen-skill-contract.md  memory-consolidation.md  nonblocking-message-runtime.md  operation-event-contract.md  outcome-taxonomy-trace-schema.md  resource-reference-resolution.md  skill-contracts-acceptance-policy.md  tool-contract-recovery-loop.md  typed-memory-migration.md  webui-performance-memory-codex-ui.md
docs/plans/: 2026-03-03-m0-project-skeleton-implementation-plan.md  (+31 more)
probe_client/: __init__.py  config.yaml.example  probe_client.py  requirements.txt
scripts/: agent_cli.py  audit_image_gen_cli.py  audit_system_contracts.py  check_api.py  check_models.py  debug_notion.py  demo_weixin.py  diagnose_tool_calling.py  e2e_coder_skill.py  probe_antigravity_tools.py  probe_client_mock.py  start-dev.sh  start.sh  verify_skills.py
skills/: SPEC.md  index.md
tests/: conftest.py  test_info_reach_skill.py  test_models_serialization.py  test_package_main.py  test_packaging_uv.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+500 files in other folders)
