[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypo-agent"
version = "0.1.0"
description = "Single-user personal AI assistant"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Hypo-Agent Team" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "structlog>=24.0.0,<26.0.0",
  "apscheduler>=3.10.0,<4.0.0",
  "litellm>=1.60.0,<2.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "pymupdf>=1.26.0,<2.0.0",
  "python-pptx>=1.0.0,<2.0.0",
  "python-docx>=1.1.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hypo_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
